test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/invalid_declarations/local_var_follows_extern.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  int
  identifier(i)
  =
  const int(10)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  extern
  int
  identifier(i)
  ;
  int
  identifier(i)
  ;
  return
  identifier(i)
  ;
  }
